# pong

./: CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  flake.nix  main.cpp
glfw/: CMakeLists.txt
glfw/inc/: glfw.hpp
glfw/src/: glfw.cpp
opengl/: CMakeLists.txt
opengl/inc/: opengl.hpp
opengl/src/: opengl.cpp
proptest-regressions/: collide.txt
src/: CMakeLists.txt  ball.rs  collide.rs  collider.rs  geometry.rs  graphics.rs  lib.rs  main.cpp  main.rs  paddle.rs  physics.rs  render.rs  renderdata.rs  shader.wgsl  transform.rs
src/graphics/: mod.rs  shader.rs  shader.wgsl
src/physics/: mod.rs
src/render/: mod.rs  vert.glsl
src/render/shader/: frag.glsl  mod.rs  vert.glsl
src/shaders/: frag.glsl  mod.rs  vert.glsl
